# alt-p2p-ui

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  TODO.md  index.html  package-lock.json  package.json  vite.config.ts
scripts/: build-jre.ps1  build-jre.sh  copy-sidecar.mjs
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/scripts/: run-java.sh
src-tauri/sidecar/: Cargo.toml
src-tauri/sidecar/src/: main.rs
src-tauri/src/: main.rs
src/components/: ConnectionStatus.tsx  DebugConsole.tsx  ReceiveView.tsx  SendView.tsx  SessionConfig.tsx  SettingsView.tsx  TransferProgress.tsx
src/hooks/: useTransfer.ts
src/lib/: jar.ts
src/types/: ipc.ts
